# keystone-counsel

./: .gitignore  Makefile  README.md  pyproject.toml
data/audit/: ledger.jsonl
data/corpus/kyc-requirements/: client-onboarding-kyc.md
data/corpus/legal-opinions/: fiduciary-duty-standard.md
data/corpus/regulatory-guidance/: disclosure-obligations.md  suitability-requirements.md
data/corpus/suitability-assessments/: risk-tolerance-methodology.md
data/eval/: cases.jsonl
data/eval/results/: eval-20260711T004849.json  eval-20260711T010141.json  eval-20260711T010643.json
docs/: MIGRATION.md
migrations/: 001_counsel_schema.sql
src/keystone_counsel/: __init__.py  api.py  audit.py  auth.py  config.py  corpus.py  eval.py  models.py  observability.py  pgaudit.py  pgvectorstore.py  rag.py  vectorstore.py
tests/: test_cross_client.py  test_smoke.py
